graph_saver module started. GeoNode and GeoGraph classes created.

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>data_parser</module>
+		<module>graph_saving</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
