--- a/WebServer/pom.xml
+++ b/WebServer/pom.xml
@@ -15,6 +15,8 @@
 	<description>Final Project. Advanced Programming 2023.</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>18</maven.compiler.source>
+		<maven.compiler.target>18</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
