--- a/.github/workflows/main_AddressCorrection.yml
+++ b/.github/workflows/main_AddressCorrection.yml
@@ -19,24 +19,18 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: set lower case username
-      run: |
-        echo "CONTAINER_USER_LC=${OWNER,,}" >> ${GITHUB_ENV}
-      env:
-        OWNER: '${{ secrets.AzureAppService_ContainerUsername_8b99bdafc9e9485180da350800f3e5f7 }}'
-
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
         registry: https://addresscorrectionreg.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_2481114650d84493877e605c18695d78 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_2944417526df4a498e8433dd8d0ce1be }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_8b99bdafc9e9485180da350800f3e5f7 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_3182a52ad2234ecf8517d544af8aee60 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: addresscorrectionreg.azurecr.io/${{ CONTAINER_USER_LC }}/addresscorrection:${{ github.sha }}
+        tags: addresscorrectionreg.azurecr.io/addresscorrection:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -54,4 +48,4 @@ jobs:
         app-name: 'AddressCorrection'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_598d8a19d5354535adc52605001d8d63 }}
-        images: 'addresscorrectionreg.azurecr.io/${{ CONTAINER_USER_LC }}/addresscorrection:${{ github.sha }}'
+        images: 'addresscorrectionreg.azurecr.io/addresscorrection:${{ github.sha }}'
